cmake_minimum_required(VERSION 3.10)
project(codebase)

set(CMAKE_CXX_STANDARD 11)

include_directories(ix)
include_directories(rbf)
#include_directories(rm)

add_executable(ixtest_01
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_01.cc)

add_executable(ixtest_02
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_02.cc)

add_executable(ixtest_03
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_03.cc)

add_executable(ixtest_04
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_04.cc)

add_executable(ixtest_05
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_05.cc)

add_executable(ixtest_06
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_06.cc)

add_executable(ixtest_07
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_07.cc)

add_executable(ixtest_08
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_08.cc)

add_executable(ixtest_09
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_09.cc)

add_executable(ixtest_10
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_10.cc)


add_executable(ixtest_11
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_11.cc)

add_executable(ixtest_12
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_12.cc)

add_executable(ixtest_13
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_13.cc)

add_executable(ixtest_14
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_14.cc)

add_executable(ixtest_15
        rbf/pfm.h
        rbf/rbfm.h
        rbf/pfm.cc
        rbf/rbfm.cc
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_15.cc)